alignment issue fix

--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -721,6 +721,7 @@ hr {
 #btn-pointsofinterest-holder a {
   padding: 0;
   padding-top: 3px;
+  margin-left: -3px;
 }
 
 #btn-pointsofinterest-download-holder {
